fixed focus on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,10 @@
   box-sizing: border-box;
 }
 
-*:focus {
+*:focus,
+a:focus,
+button:focus,
+[type="submit"]:focus {
   outline: 3px solid var(--main-color);
   outline-offset: 2px;
 }
